[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Entities/Enemies/EnemyBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/SingleShooter.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Enemies/single_shooter.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Weapons/SingleShooterBlaster.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]

[node name="SingleShooter" instance=ExtResource( 1 )]
collision_mask = 6
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." index="1"]
position = Vector2( 7.15256e-07, 0 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2( -0.5, 0 )

[node name="StateTimer" type="Timer" parent="." index="3"]
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="4"]
shape = SubResource( 1 )

[node name="SingleShooterBlaster" parent="." index="5" instance=ExtResource( 4 )]

[connection signal="timeout" from="StateTimer" to="." method="_on_StateTimer_timeout"]
